# SudokuSolverCUDA

./: .gitignore  CMakeLists.txt  README.md
src/: main.cu  main_cpu.cpp
